--- a/src/pages/peoples/huainan.astro
+++ b/src/pages/peoples/huainan.astro
@@ -2,7 +2,7 @@
 import PersonProfile from '@/components/peoples/PersonProfile.astro'
 import { getMemberById } from '@/utils/members'
 
-const person = getMemberById('huainan')
+const person = getMemberById('meteorshn')
 
 if (!person) {
   return Astro.redirect('/404')
