--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -111,6 +111,11 @@ const headings = [
   <Timeline
     events={[
       {
+        date: '2025-08-11',
+        content:
+          '完成了基本的网站开发，成员开始进驻社区并且开始进行社区活动筹备。'
+      },
+      {
         date: '2025-08-01',
         content:
           '网站开始进行开发，由Andreo设计了网页，并且由ACondawayUNo进行了信息的补充'
