--- a/src/layouts/PersonLayout.astro
+++ b/src/layouts/PersonLayout.astro
@@ -11,7 +11,7 @@ interface Props {
     name: string
     avatar: string
     organization: string
-    role: string
+    role: string | string[]
     slogan: string
     tags?: string[]
     description: string
