--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -66,7 +66,7 @@ const headings = [
     class='mb-5'
     title='核心团队成员'
     showAll={true}
-    filterByRole={['社区创始人', '核心成员', '社区网站运维', '社区运营参与者']}
+    filterByRole={['社区创始人', '核心成员', '社区运营维护']}
   />
 
   <WhoWeAre
