--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -19,6 +19,8 @@ html {
   font-weight: 300;
   letter-spacing: -0.01em;
   font-size: 16px;
+  overflow-y: scroll;
+  scrollbar-gutter: stable both-edges;
 }
 
 /* Theme */
