--- a/src/layouts/CommonPage.astro
+++ b/src/layouts/CommonPage.astro
@@ -19,7 +19,11 @@ const { title, headings, info, ...props } = Astro.props
 ---
 
 <PageLayout meta={{ title }} {...props}>
-  {headings?.length && <TOC headings={headings} slot='sidebar' />}
+  {Astro.slots.has('sidebar') ? (
+    <slot name='sidebar' slot='sidebar' />
+  ) : (
+    headings?.length && <TOC headings={headings} slot='sidebar' />
+  )}
 
   <Fragment slot='header'>
     <h1 class='text-2xl font-medium sm:mb-2 sm:text-3xl'>
