--- a/src/pages/authors/index.astro
+++ b/src/pages/authors/index.astro
@@ -17,34 +17,36 @@ const meta = {
 <PageLayout {meta}>
   <Button title='Back' href='/blog' style='back' />
   <main class='mt-6 lg:mt-10'>
-    <div id='content-header' class='animate'>
-      <h1 class='mb-6 text-3xl font-medium'>Authors</h1>
-    </div>
+    <div class='mx-auto max-w-4xl'>
+      <div id='content-header' class='animate'>
+        <h1 class='mb-6 text-3xl font-medium'>Authors</h1>
+      </div>
 
-    <div id='content' class='animate'>
-      {
-        allAuthors.length > 0 ? (
-          <ul class='flex flex-wrap gap-4'>
-            {allAuthors.map(([author, val]) => (
-              <li>
-                <Button
-                  href={`/authors/${author}`}
-                  style='pill'
-                  class={cn(
-                    'items-start gap-x-1',
-                    val > 2 ? 'rounded-xl px-3 py-1 text-xl' : val > 1 && 'text-lg'
-                  )}
-                >
-                  {author}
-                  <span class={val > 2 ? 'text-base' : 'text-xs'}>{val}</span>
-                </Button>
-              </li>
-            ))}
-          </ul>
-        ) : (
-          <p>Any author yet.</p>
-        )
-      }
+      <div id='content' class='animate'>
+        {
+          allAuthors.length > 0 ? (
+            <ul class='flex flex-wrap gap-4 list-none pl-0'>
+              {allAuthors.map(([author, val]) => (
+                <li>
+                  <Button
+                    href={`/authors/${author}`}
+                    style='pill'
+                    class={cn(
+                      'items-start gap-x-1',
+                      val > 2 ? 'rounded-xl px-3 py-1 text-xl' : val > 1 && 'text-lg'
+                    )}
+                  >
+                    {author}
+                    <span class={val > 2 ? 'text-base' : 'text-xs'}>{val}</span>
+                  </Button>
+                </li>
+              ))}
+            </ul>
+          ) : (
+            <p>Any author yet.</p>
+          )
+        }
+      </div>
     </div>
   </main>
 </PageLayout> 
